Fixes margins and remove unnecessary code

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,7 +15,7 @@
       </a>
     </div>
     <div class="row">
-      <h1>
+      <h1 class="bigger">
         <a class="white" href="/">{{ site.name }}</a>
       </h1>
       <blockquote>
