--- a/assets/stylesheets/mixins/about.sass
+++ b/assets/stylesheets/mixins/about.sass
@@ -15,6 +15,11 @@
   dl dd
     margin-bottom: 0
 
+  hr
+    max-width: 95%
+
+.xp, .academic
+  margin-bottom: 64px
 
 .panel
   page-break-inside: avoid
