--- a/assets/stylesheets/main.sass
+++ b/assets/stylesheets/main.sass
@@ -24,6 +24,9 @@
 .row
   max-width: 100rem
 
+.label
+  margin: 2px 0
+
 @media only screen and (min-width: 40.0625em)
   h2
     font-size: 2.2rem
