--- a/assets/stylesheets/mixins/about.sass
+++ b/assets/stylesheets/mixins/about.sass
@@ -15,8 +15,8 @@
   dl dd
     margin-bottom: 0
 
-  hr
-    max-width: 95%
+hr.who-spacer
+  max-width: 95%
 
 .xp, .academic
   margin-bottom: 64px
