Fixes code highlight syntax

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,6 +9,7 @@
   <link href="/vendor/foundation-icon-fonts/foundation-icons.css" rel="stylesheet" />
   <!-- Custom CSS -->
   <link href="/assets/stylesheets/main.css" rel="stylesheet" />
+  <link href="/assets/stylesheets/syntax.css" rel="stylesheet" />
   <link href="/assets/stylesheets/print.css" media="print" rel="stylesheet" />
   <link href="/assets/images/favicon.png" rel="icon" />
 
