--- a/assets/stylesheets/mixins/posts.sass
+++ b/assets/stylesheets/mixins/posts.sass
@@ -27,3 +27,47 @@
 
     hr
       max-width: none
+
+// syntax
+.post
+  figure.highlight
+    pre
+      border: solid 1px #ddd
+      background: #fff
+      padding: 0
+      line-height: 23px
+      margin-bottom: 30px
+      white-space: pre
+      overflow-x: auto
+      word-break: inherit
+      word-wrap: inherit
+
+      code
+        border: none
+        padding: 0
+
+        table
+          margin-bottom: 0
+
+    td
+      padding: 8px 15px
+
+    .gl
+      background: #fafafa
+      border-right: 1px solid #ddd
+      color: #999
+
+      -webkit-touch-callout: none
+      -webkit-user-select: none
+      -khtml-user-select: none
+      -moz-user-select: none
+      -ms-user-select: none
+      user-select: none
+
+    td.code
+      width: 100%
+
+    td.gutter, td.code
+      pre
+        border: none
+        background: none
