Update menu and last xp style

--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -9,7 +9,7 @@
       <a href="/">Blog</a>
     </menuitem>
     <menuitem class="menuitem">
-      <a href="/about.html">Felipe Vieira</a>
+      <a href="/about.html">Sobre</a>
     </menuitem>
   </menu>
 </nav>
