--- a/assets/stylesheets/mixins/header.sass
+++ b/assets/stylesheets/mixins/header.sass
@@ -33,6 +33,8 @@ header
 
       .nvieirafelipe
         height: 32px
+        border-radius: 1em
+        margin-top: 2px
 
       .icons
         color: white
