--- a/assets/stylesheets/mixins/about.sass
+++ b/assets/stylesheets/mixins/about.sass
@@ -18,8 +18,11 @@
 hr.who-spacer
   max-width: 95%
 
-.xp, .academic
-  margin-bottom: 64px
+.about
+  .xp, .academic
+    margin-bottom: 64px
+  .xp.columns:last-child:not(:first-child)
+    float: left
 
 .panel
   page-break-inside: avoid
