Fixes printed version of about

--- a/assets/stylesheets/print.sass
+++ b/assets/stylesheets/print.sass
@@ -8,14 +8,17 @@ a
   display: block !important
 
 .developer
-  width: 33.33333%
+  width: 40%
 .contact
-  width: 6.66667%
+  width: 250px
 .list
   display: block
   width: 652px
 .list a:after
   content: '' !important
+
+.about .xp, .about .academic
+  margin-bottom: 10px
 
 .bigger
   font-size: 1.5rem
