--- a/assets/stylesheets/mixins/about.sass
+++ b/assets/stylesheets/mixins/about.sass
@@ -24,6 +24,9 @@ hr.who-spacer
   .xp.columns:last-child:not(:first-child)
     float: left
 
+  dl dt a
+    font-size: 1.35em
+
 .panel
   page-break-inside: avoid
 
