--- a/assets/stylesheets/main.sass
+++ b/assets/stylesheets/main.sass
@@ -15,6 +15,12 @@
   background-color: white
   padding: 10px 20px
 
+  .not-there-yet
+    font-style: italic
+    font-size: 0.8em
+    text-align: center
+    color: tomato
+
 *[class*='fi-']
   vertical-align: middle
   margin-right: 10px
