--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <!--[if IE 9] <html class="lt-ie10" lang="pt-BR" >-->
 <html lang="pt-BR">
-  {% include head.html %}
+  {% include_relative _layouts/head.html %}
   <body>
     <div class="wrapper">
-      {% include header.html %}
+      {% include_relative _layouts/header.html %}
       <main>
         {{ content }}
       </main>
     </div>
-    {% include footer.html %}
+    {% include_relative _layouts/footer.html %}
   </body>
 </html>
