--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@
     <div class="wrapper">
       {% include_relative _layouts/header.html %}
       <main>
+        {% include_relative _layouts/menu.html %}
         {{ content }}
       </main>
     </div>
