--- a/_layouts/footer.html
+++ b/_layouts/footer.html
@@ -1,6 +1,6 @@
-<footer class="hide-for-print">
+<footer class="hide-for-print footer">
   <div class="row">
-    <p class="small right">
+    <p>
       Powered by Jekyll
       <img class="jekyll" src="/assets/images/jekyll-notext-light-transparent.png"/>
     </p>
