--- a/_layouts/header.html
+++ b/_layouts/header.html
@@ -1,26 +1,26 @@
-<header class="hide-for-print">
+<header class="hide-for-print header">
   <div class="overlay">
-    <div class="row top-header">
-      <a href="/about.html">
+    <div class="row header-links">
+      <a href="/about.html" class="header-link">
         <img class="nvieirafelipe" src="/assets/images/nvieirafelipe.png"/>
       </a>
-      <a href="http://github.com/nvieirafelipe">
+      <a href="http://github.com/nvieirafelipe" class="header-link">
         <i class="fi-social-github icons"></i>
       </a>
-      <a href="http://twitter.com/nvieirafelipe">
+      <a href="http://twitter.com/nvieirafelipe" class="header-link">
         <i class="fi-social-twitter icons"></i>
       </a>
-      <a href="mailto:nvieirafelipe@gmail.com">
+      <a href="mailto:nvieirafelipe@gmail.com" class="header-link">
         <i class="fi-mail icons"></i>
       </a>
     </div>
-    <div class="row">
-      <h1 class="bigger">
-        <a class="white" href="/">{{ site.name }}</a>
+    <div class="row header-quote">
+      <h1 class="site-title">
+        <a href="/">{{ site.name }}</a>
       </h1>
       <blockquote>
         <p>Master programmers think of systems as stories to be told rather than programs to be written.</p>
-        <cite class="white">Robert C. Martin</cite>
+        <cite>Robert C. Martin</cite>
       </blockquote>
     </div>
   </div>
