--- a/assets/stylesheets/main.sass
+++ b/assets/stylesheets/main.sass
@@ -5,7 +5,7 @@
 @import mixins/sizes
 
 @import mixins/header
-@import mixins/stick_footer
+@import mixins/footer
 @import mixins/menu
 @import mixins/posts
 @import mixins/about
@@ -19,14 +19,11 @@
     font-style: italic
     font-size: 0.8em
     text-align: center
-    color: tomato
+    color: $gray
 
 *[class*='fi-']
   vertical-align: middle
   margin-right: 10px
-
-.row
-  max-width: 100rem
 
 .label
   margin: 2px 0
