--- a/assets/stylesheets/mixins/_colors.sass
+++ b/assets/stylesheets/mixins/_colors.sass
@@ -1,22 +1,10 @@
 $red: #FF0000
 $dark-red: #B21212
+
 $yellow: #FFC400
-$blue: #1485CC
+
+$blue: #2199e8
 $dark-blue: #0971B2
-$light-gray: #F6F6F6
 
 $gray: #999
-
-a
-  color: $dark-blue
-  &:hover
-    color: $blue
-
-.dark-blue
-  background-color: $dark-blue
-
-.yellow
-  background-color: $yellow
-
-.white
-  color: white
+$light-gray: #F6F6F6
