--- a/assets/stylesheets/mixins/_sizes.sass
+++ b/assets/stylesheets/mixins/_sizes.sass
@@ -1,11 +1,4 @@
-.bigger
-  font-size: 2rem
-
-.big
-  font-size: 1.5rem
-
-.mid
-  font-size: 1rem
-
-.small
-  font-size: 0.8rem
+$font-bigger: 2rem
+$font-big: 1.5rem
+$font-mid: 1rem
+$font-small: 0.8rem
