--- a/assets/stylesheets/mixins/_timeline.sass
+++ b/assets/stylesheets/mixins/_timeline.sass
@@ -27,12 +27,12 @@
     .code:before
       top: 33px
       left: 22px
-      height: 1188px
+      height: 86.15rem
 
     .college:before
       top: 35px
       left: 22px
-      height: 800px
+      height: 45.8rem
 
   @media screen and (max-width: 1025px)
     .timeline
