--- a/assets/stylesheets/mixins/_header.sass
+++ b/assets/stylesheets/mixins/_header.sass
@@ -1,6 +1,7 @@
 $header-gradient: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0))
 $transition: background-image 3s ease-in-out
-header
+
+.header
   transition: $transition
   -webkit-transition: $transition
   -moz-transition: $transition
@@ -18,35 +19,47 @@ header
     height: 100%
     padding: 20px
 
-  .top-header
+  .header-links
     position: absolute
     top: 0px
     right: 0px
     width: 214px
     height: auto
 
-    a
-      display: inline-block
-      margin: 8px
-      vertical-align: top
-      text-align: center
+.header-links
+  .header-link
+    display: inline-block
+    margin: 8px
+    vertical-align: top
+    text-align: center
 
-      .nvieirafelipe
-        height: 32px
-        border-radius: 1em
-        margin-top: 2px
+  .nvieirafelipe
+    height: 32px
+    border-radius: 16px
+    margin-top: 2px
 
-      .icons
-        color: white
-        font-size: 2em
+  .icons
+    color: white
+    font-size: 32px
 
-  blockquote
-    p
-      font-family: serif
-      font-size: 1.46rem
-      color: white
+.header-quote p, .header-quote cite
+  color: white
 
-  @media screen and (max-width: 399px)
-    blockquote
-      p
-        font-size: 1.1rem
+.header-quote
+  transition: margin 0.3s ease-out
+
+  p
+    font-family: serif
+    font-size: $font-big
+
+@media screen and (max-width: 399px)
+  .header-quote
+    margin-top: 30px
+
+  .header-quote p
+    font-size: $font-mid
+
+.site-title
+  font-size: $font-bigger
+  a
+    color: white
