--- a/assets/stylesheets/mixins/_menu.sass
+++ b/assets/stylesheets/mixins/_menu.sass
@@ -1,18 +1,30 @@
 menu
+  background-color: $blue
+  box-shadow: 1px 1px 5px $gray
   height: 64px
-  background-color: white
-  border: 1px solid #efefef
   padding: 0
+  margin-top: -32px
 
-  menuitem
+  .menuitem
     display: inline-block
     a
+      color: white
       padding: 20px
 
+    a:hover
+      border-bottom: 2px solid white
+
+
   .outer-left
-    margin-left: -63px
+    transition: all .3s ease-out
+    margin-left: -64px
     a
       padding: 0px
 
-  .outer-left > a > .nvieirafelipe
-    height: 62px
+    .nvieirafelipe
+      height: 64px
+
+  @media screen and (max-width: 1350px)
+    .outer-left
+      visibility: hidden
+      opacity: 0
