--- a/assets/stylesheets/mixins/_timeline.sass
+++ b/assets/stylesheets/mixins/_timeline.sass
@@ -1,4 +1,7 @@
 .about
+  .academic img
+    margin-bottom: 12px
+
   .college, .code
     display: inline-block
     width: 46px
@@ -17,6 +20,9 @@
     background-size: contain
 
   @media screen and (min-width: 1025px)
+    .xp, .academic
+      height: 250px
+
     .code:before, .college:before
       border: 1px solid $dark-blue
       content: ''
@@ -27,12 +33,12 @@
     .code:before
       top: 33px
       left: 22px
-      height: 86.15rem
+      height: 81.15rem
 
     .college:before
       top: 35px
       left: 22px
-      height: 45.8rem
+      height: 40.5rem
 
   @media screen and (max-width: 1025px)
     .timeline
