--- a/_layouts/header.html
+++ b/_layouts/header.html
@@ -1,7 +1,7 @@
 <header class="hide-for-print header">
   <div class="overlay">
     <div class="row header-links">
-      <a href="/about.html" class="header-link">
+      <a href="/" class="header-link">
         <img class="nvieirafelipe" src="/assets/images/nvieirafelipe.png"/>
       </a>
       <a href="http://github.com/nvieirafelipe" class="header-link">
@@ -15,10 +15,7 @@
       </a>
     </div>
     <div class="row header-quote">
-      <h1 class="site-title">
-        <a href="/">{{ site.name }}</a>
-      </h1>
-      <blockquote>
+      <blockquote class="columns small-12 medium-6">
         <p>Master programmers think of systems as stories to be told rather than programs to be written.</p>
         <cite>Robert C. Martin</cite>
       </blockquote>
