--- a/assets/stylesheets/mixins/_footer.sass
+++ b/assets/stylesheets/mixins/_footer.sass
@@ -21,8 +21,9 @@ body
   text-align: right
 
 .footer > .row
-  background-color: $blue
-  color: white
+  background-color: white
+  box-shadow: 0 1px 5px $gray
+  color: $gray
   padding: 10px 20px
   height: $footer-height
 
