Timeline layout updates

--- a/assets/stylesheets/main.sass
+++ b/assets/stylesheets/main.sass
@@ -16,7 +16,9 @@
 .label
   margin: 2px 0
 
-@media only screen and (min-width: 40.0625em)
-  h2
-    font-size: 2.2rem
+.stick
+  position: fixed
+  top: 0
 
+  .column
+    width: 100%
