--- a/_layouts/footer.html
+++ b/_layouts/footer.html
@@ -6,8 +6,8 @@
     </p>
   </div>
   <!-- Vendor JS -->
-  <script src="/bower_components/jquery/dist/jquery.js"></script>
-  <script src="/bower_components/foundation-sites/dist/foundation.js"></script>
+  <script src="/bower_components/jquery/dist/jquery.min.js"></script>
+  <script src="/bower_components/foundation-sites/dist/foundation.min.js"></script>
   <script src="/bower_components/Chart.js/Chart.js"></script>
   <!-- Custom JS -->
   <script src="/assets/js/main.js"></script>
