--- a/_layouts/head.html
+++ b/_layouts/head.html
@@ -5,11 +5,10 @@
   <meta content="pt-br" http-equiv="content-language"/>
   <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
   <!-- Vendor CSS -->
-  <link href="/bower_components/foundation-sites/dist/foundation.css" rel="stylesheet" />
+  <link href="/bower_components/foundation-sites/dist/foundation.min.css" rel="stylesheet" />
   <link href="/bower_components/foundation-icon-fonts/foundation-icons.css" rel="stylesheet" />
   <!-- Custom CSS -->
   <link href="/assets/stylesheets/main.css" rel="stylesheet" />
-  <link href="/assets/stylesheets/syntax.css" rel="stylesheet" />
   <link href="/assets/stylesheets/print.css" media="print" rel="stylesheet" />
   <link href="/assets/images/favicon.png" rel="icon" />
 
