Add google site verification

--- a/_layouts/head.html
+++ b/_layouts/head.html
@@ -12,5 +12,6 @@
   <link href="/assets/stylesheets/print.css" media="print" rel="stylesheet" />
   <link href="/assets/images/favicon.png" rel="icon" />
 
+  <meta name="google-site-verification" content="R1SuSTjnrHblVxGAmR7qTSHVhzm9ALHr8aPpFWmOkI0" />
   <title>{{ page.title }}</title>
 </head>
