--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,6 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html>
 <!--[if IE 9] <html class="lt-ie10" lang="pt-BR" >-->
-<html lang="pt-BR">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="pt-BR">
   {% include_relative _layouts/head.html %}
   <body>
     <div class="wrapper">
