--- a/_layouts/head.html
+++ b/_layouts/head.html
@@ -1,8 +1,7 @@
 <head>
   <meta charset="utf-8"/>
-  <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible"/>
+  <meta content="IE=edge" http-equiv="X-UA-Compatible"/>
   <meta content="Felipe Vieira" name="author"/>
-  <meta content="pt-br" http-equiv="content-language"/>
   <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
   <!-- Vendor CSS -->
   <link href="/bower_components/foundation-sites/dist/foundation.min.css" rel="stylesheet" />
