--- a/assets/stylesheets/mixins/_about.sass
+++ b/assets/stylesheets/mixins/_about.sass
@@ -4,10 +4,14 @@
 
   margin-top: 24px
 
+  .contact
+    dt
+      font-weight: 400
+
   dl
     list-style: none
 
-  dd
+  dd, dt
     display: inline-block
     width: 230px
     margin-bottom: 0
