--- a/_layouts/head.html
+++ b/_layouts/head.html
@@ -1,16 +1,28 @@
 <head>
   <meta charset="utf-8"/>
-  <meta content="IE=edge" http-equiv="X-UA-Compatible"/>
-  <meta content="Felipe Vieira" name="author"/>
-  <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-  <!-- Vendor CSS -->
-  <link href="/bower_components/foundation-sites/dist/foundation.min.css" rel="stylesheet" />
-  <link href="/bower_components/foundation-icon-fonts/foundation-icons.css" rel="stylesheet" />
-  <!-- Custom CSS -->
+  <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="google-site-verification" content="R1SuSTjnrHblVxGAmR7qTSHVhzm9ALHr8aPpFWmOkI0" />
+  <meta name="author" content="Felipe Vieira"/>
+  <meta name="description" content="Desenvolvedor de Software - Campinas, SP"/>
+
+  <meta itemprop="name" content="Felipe Vieira">
+  <meta itemprop="description" content="Desenvolvedor de Software - Campinas, SP">
+  <meta itemprop="image" content="/assets/images/nvieirafelipe.png">
+
+  <meta property="og:url" content="http://nvieirafelipe.github.io">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Felipe Vieira">
+  <meta property="og:description" content="Desenvolvedor de Software - Campinas, SP">
+  <meta property="og:image" content="/assets/images/nvieirafelipe.png">
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Felipe Vieira">
+  <meta name="twitter:description" content="Desenvolvedor de Software - Campinas, SP">
+  <meta name="twitter:image" content="/assets/images/nvieirafelipe.png">
+
   <link href="/assets/stylesheets/main.css" rel="stylesheet" />
-  <link href="/assets/stylesheets/print.css" media="print" rel="stylesheet" />
   <link href="/assets/images/favicon.png" rel="icon" />
 
-  <meta name="google-site-verification" content="R1SuSTjnrHblVxGAmR7qTSHVhzm9ALHr8aPpFWmOkI0" />
   <title>{{ page.title }}</title>
 </head>
