--- a/_layouts/header.html
+++ b/_layouts/header.html
@@ -1,4 +1,4 @@
-<header class="hide-for-print header">
+<header class="hide-for-print header bg-01">
   <div class="overlay">
     <div class="row header-links">
       <a href="/" class="header-link">
