--- a/src/sass/timeline.sass
+++ b/src/sass/timeline.sass
@@ -1,3 +1,6 @@
+.label
+  margin: 2px 0
+
 .about
   .academic img
     margin-bottom: 12px
@@ -10,12 +13,12 @@
     vertical-align: middle
 
   .college
-    background: url('../images/college.png') no-repeat
+    background: url('~images/college.png') no-repeat
     background-position: center
     background-size: contain
 
   .code
-    background: url('../images/code.png') no-repeat
+    background: url('~images/code.png') no-repeat
     background-position: center
     background-size: contain
 
